--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -4,7 +4,14 @@
 }
 body {
 	margin: 0px;
+	background-color: black;
+	overflow: hidden;
 }
+canvas {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+},
 #UiLayer {
 	position: absolute;
 	width: 100vw;
