--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -2,6 +2,10 @@
 	font-family: "Dogica";
 	src: url("../assets/fonts/dogicapixel.ttf");
 }
+@font-face {
+	font-family: "Pixeled";
+	src: url(../assets/fonts/Pixeled.ttf);
+}
 body {
 	margin: 0px;
 	background-color: black;
